Add live ElevenLabs dispatch and auth diagnostics